--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -11,6 +11,10 @@ jobs: # useful names are important
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: swe4s
+          environment-file: environment.yml
       - run: pycodestyle $(git ls-files "*.py") # nice way of generalizing and not having to list every python file
       
   unit_tests:
