--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -7,6 +7,21 @@ on: # what events trigger our workflow
     branches: [main]
     
 jobs: # useful names are important
+  func_tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with: # idk how these environments work....
+          activate-environment: swe4s
+          environment-file: environment.yml
+      - run: |
+          cd test/func
+          bash test_search.sh
+        
   code_style:
     runs-on: ubuntu-latest
     defaults:
